# iso20022

./: Cargo.toml  README.md
example/: camt.029.001.09.xml  camt.056.001.08.xml  pacs.008.001.08_1.xml  pacs.008.001.08_2.xml  pacs.008.001.08_3.xml  pain.001.001.09.xml  pain.008.001.08.xml
old/: prototype.py
src/: customer_to_bank_credit_transfer_information.rs  main.rs
src/msgs/: camt_029_001_09.rs  date_format.rs  pacs_008_001_08.rs  pain_001_001_09.rs  pain_002_001_10.rs  pain_008_001_08.rs
xsd_to_rs/: generator.py  main.py  parser.py  parser_xsd.py  regex_generator.py  transformer.py
xsd_to_rs/templates/: enum.rs.j2  regex.rs.j2  struct.rs.j2
xsds/: xsd.py
