[package]
name = "iso"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = { version = "0.31.0", features = ["serialize"] }
chrono = { version = "0.4.37", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
validator = { version = "0.16.1", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.10.4"
derive_builder = "0.20.0"
once_cell = "1.19.0"
uuid = { version = "1.8.0", features = ["v4"] }